[package]
name = "repl_fs"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "repl_fs_server"
path = "src/server.rs"

[[bin]]
name = "repl_fs_client"
path = "src/client.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.10"
